# AutoPrompt

./: .gitignore  README.md  config.dev.yml  config.yml  deploy.sh  main.py  next.config.mjs  package-lock.json  package.json  prompt_management_spec.md  sample_dataset.csv  snuggly-conjuring-koala.md  tailwind.config.ts  tsconfig.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ragas_phase4.py  0003_drop_case_nm.py  0004_chatver_nodemas_refactor.py  0005_ragas_flow_scope.py  0006_prompt_split_drop_vartable.py  0007_test_run_ab_group.py  0008_ragas_main_cleanup.py  0009_ragas_ab_columns.py  0010_drop_external_anchors.py  0011_add_system_config.py
backend/app/: main.py
backend/app/core/: config.py  constants.py  db.py  ws.py
backend/app/models/: __init__.py  audit.py  chat_ver.py  dataset.py  edge.py  flow_ver.py  model_mas.py  node.py  node_mas.py  node_prompt_ver.py  project.py  prompt.py  (+4 more)
backend/scripts/: create_pm_tables.py  demo_seed_oracle.py  demo_seed_oracle.sql  reset_db.py  seed_phase1.py  seed_pm_demo.py
backend/sql/: ddl_initial.sql  seed_phase1.sql
backend/tests/: conftest.py  test_ab.py  test_active_prompts.py  test_audit.py  test_batch.py  test_datasets.py  test_export.py  test_external_agent.py  test_flow.py  test_flow_dataset.py  test_flow_direct.py  test_llm_adapters.py  test_phase6.py  test_prompt_delete.py  test_prompts.py  test_ragas.py  test_ragas_cancel.py  test_ragas_score_nan.py  test_ragas_select.py  test_system_config.py  test_test_runs.py
(+169 files in other folders)
