[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-management-backend"
version = "0.1.0"
description = "AI Agent Prompt Management System - FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13",
    "oracledb>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "anthropic>=0.39",
    "openai>=1.40",
    "google-generativeai>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
